--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -156,89 +156,89 @@
     <string name="error_create_feature">Помилка створення об\'єкта</string>
     <string name="no">Ні</string>
     <string name="yes">Так</string>
-    <string name="has_edits">There are unsaved edits. Do you want to save them?</string>
-    <string name="attributes_next">Next</string>
-    <string name="attributes_prev">Previous</string>
-    <string name="not_enough_points">Недостаточно точек</string>
-    <string name="error_change_feature">Change feature failed</string>
-    <string name="move_point_to_center">Point to display center</string>
-    <string name="mainSettings">Main settings</string>
-    <string name="displaySettings">Display settings</string>
-    <string name="fill_color">Fill color</string>
-    <string name="stroke_color">Цвет обводки</string>
-    <string name="width">Толщина</string>
-    <string name="size">Размер</string>
+    <string name="has_edits">Є незбережені зміни. Чи бажаєте ви їх зберегти?</string>
+    <string name="attributes_next">Наступний</string>
+    <string name="attributes_prev">Попередній</string>
+    <string name="not_enough_points">Недостатньо точок</string>
+    <string name="error_change_feature">Помилка зміни об'єкта</string>
+    <string name="move_point_to_center">Змістити точку до центру</string>
+    <string name="mainSettings">Основні налаштування</string>
+    <string name="displaySettings">Показати налаштування</string>
+    <string name="fill_color">Колір заповнення</string>
+    <string name="stroke_color">Колір обведення</string>
+    <string name="width">Товщина</string>
+    <string name="size">Розмір</string>
     <string name="fill">Заливка</string>
     <string name="type">Тип</string>
-    <string name="type_solid">Сплошная</string>
+    <string name="type_solid">Суцільна</string>
     <string name="type_dash">Пунктир</string>
-    <string name="type_edge">Сплошная на границах</string>
+    <string name="type_edge">Суцільна на межах</string>
     <string name="type_point">Точка</string>
     <string name="type_circle">Круг</string>
     <string name="type_diamond">Ромб</string>
-    <string name="type_cross">Крест</string>
-    <string name="type_triangle">Треугольник</string>
+    <string name="type_cross">Хрест</string>
+    <string name="type_triangle">Трикутник</string>
     <string name="type_box">Квадрат</string>
     <string name="type_edit_circle">Круг 2</string>
-    <string name="type_crossed_box">Крест в квадрате</string>
-    <string name="layerSettings">Layer settings</string>
-    <string name="label_field_toast">Поле %1$s выбрано как метка</string>
-    <string name="red">red</string>
-    <string name="green">green</string>
-    <string name="blue">blue</string>
-    <string name="magenta">magenta</string>
-    <string name="yellow">yellow</string>
-    <string name="cyan">cyan</string>
-    <string name="select_color">Select color</string>
-    <string name="edit_account">Edit account</string>
-    <string name="edit_account_summary">Editing a user name and password</string>
-    <string name="tms_layer_cache_size">TMS in-memory cache size</string>
-    <string name="make_grayscale">Make grayscale</string>
-    <string name="contrast">Contrast: %1$.1f</string>
-    <string name="brightness">Brightness</string>
-    <string name="menu_zoom_extent">Zoom to extent</string>
-    <string name="menu_download_tiles">Download tiles</string>
-    <string name="select_zoom_levels_to_download">Select min and max zoom levels to download tiles of current extent</string>
-    <string name="start">Start</string>
-    <string name="current_zoom">Текущий зум %1$.2f</string>
-    <string name="download_complete">Download complete</string>
-    <string name="download_in_progress">Download in progress</string>
-    <string name="cancel_download">Download canceled</string>
-    <string name="download_tiles">Download tiles</string>
-    <string name="form_tiles_list">Form tiles list</string>
-    <string name="tiles_count">%1$s тайлов</string>
-    <string name="counting">Идет подсчет…</string>
-    <string name="tracks_running">Track is recording now</string>
-    <string name="tracks_title">Track %s</string>
-    <string name="walkedit_title">Walk edit %s</string>
-    <string name="tracks_stop">Stop</string>
-    <string name="tracks_open">Open</string>
-    <string name="download_tiles_finished">Tiles download finished</string>
-    <string name="not_implemented">Not implemented yet</string>
-    <string name="layer_lookuptable">Lookup table</string>
-    <string name="zoom_levels_to_show">Zoom levels to show layer</string>
-    <string name="alpha">Opacity</string>
-    <string name="layerInfo">Layer info</string>
-    <string name="geom_type">Geometry type</string>
-    <string name="feature_count">Объектов: %1$d (%2$s)</string>
-    <string name="layer_local_path">Local path: %1$s</string>
-    <string name="layer_remote_path">Remote: %1$s</string>
-    <string name="layer_has_form">с формой</string>
-    <string name="point">Point</string>
-    <string name="multi_point">Multipoint</string>
-    <string name="linestring">Linestring</string>
-    <string name="multi_linestring">Multilinestring</string>
-    <string name="polygon">Polygon</string>
-    <string name="multi_polygon">Multipolygon</string>
-    <string name="update_coordinates">Update coordinates</string>
-    <string name="background_task_started">The layer initialisation task started</string>
-    <string name="processing">Обработка</string>
-    <string name="error_unsupported_layer_type">Current layer type is unsupported </string>
-    <string name="value_not_from_list">Value is not from list</string>
-    <string name="share_gpx_multiple">How do you want to save selected tracks?</string>
-    <string name="share_gpx_separate">По отдельности</string>
+    <string name="type_crossed_box">Хрест у квадраті</string>
+    <string name="layerSettings">Налаштування шару</string>
+    <string name="label_field_toast">Поле %1$s обрано як мітка</string>
+    <string name="red">червоний</string>
+    <string name="green">зелений</string>
+    <string name="blue">синій</string>
+    <string name="magenta">фуксиновий</string>
+    <string name="yellow">жовтий</string>
+    <string name="cyan">ціановий</string>
+    <string name="select_color">Обрати колір</string>
+    <string name="edit_account">Редагувати акаунт</string>
+    <string name="edit_account_summary">Редагувати ім'я користувача та пароль</string>
+    <string name="tms_layer_cache_size">Розмір кешу TMS</string>
+    <string name="make_grayscale">Обернути на відтінки сірого</string>
+    <string name="contrast">Контраст: %1$.1f</string>
+    <string name="brightness">Яскравість</string>
+    <string name="menu_zoom_extent">Наблизити до охоплення</string>
+    <string name="menu_download_tiles">Завантажити тайли</string>
+    <string name="select_zoom_levels_to_download">Оберіть мінімальне та максимальне наближення щоб завантажити тайли для поточного охоплення карти</string>
+    <string name="start">Почати</string>
+    <string name="current_zoom">Поточне наближення %1$.2f</string>
+    <string name="download_complete">Завантаження завершено</string>
+    <string name="download_in_progress">Завантаження триває</string>
+    <string name="cancel_download">Завантаження скасовано</string>
+    <string name="download_tiles">Завантажити тайли</string>
+    <string name="form_tiles_list">Сформувати список тайлів</string>
+    <string name="tiles_count">%1$s тайлів</string>
+    <string name="counting">Обчислюю…</string>
+    <string name="tracks_running">Записую трек</string>
+    <string name="tracks_title">Трек %s</string>
+    <string name="walkedit_title">Введення обходом %s</string>
+    <string name="tracks_stop">Стоп</string>
+    <string name="tracks_open">Відкрити</string>
+    <string name="download_tiles_finished">Завантаження тайлів завершено</string>
+    <string name="not_implemented">Наразі не виконано</string>
+    <string name="layer_lookuptable">Довідник</string>
+    <string name="zoom_levels_to_show">Наближення, за яких видно шар</string>
+    <string name="alpha">Прозорість</string>
+    <string name="layerInfo">Інформація про шар</string>
+    <string name="geom_type">Тип геометрії</string>
+    <string name="feature_count">Об'єктів: %1$d (%2$s)</string>
+    <string name="layer_local_path">Локальний шлях: %1$s</string>
+    <string name="layer_remote_path">Віддалений: %1$s</string>
+    <string name="layer_has_form">з формою</string>
+    <string name="point">Точка</string>
+    <string name="multi_point">Мультиточка</string>
+    <string name="linestring">Лінія</string>
+    <string name="multi_linestring">Мультилінія</string>
+    <string name="polygon">Полігон</string>
+    <string name="multi_polygon">Мультиполігон</string>
+    <string name="update_coordinates">Оновити координати</string>
+    <string name="background_task_started">Завдання ініціалізації шару запущено</string>
+    <string name="processing">Обробка</string>
+    <string name="error_unsupported_layer_type">Цей тип шару не підтримується </string>
+    <string name="value_not_from_list">Значення не зі списку</string>
+    <string name="share_gpx_multiple">Як зберегти обрані треки?</string>
+    <string name="share_gpx_separate">Кожен окремо</string>
     <string name="share_gpx_together">В один файл</string>
-    <string name="action_edit">Редактировать</string>
+    <string name="action_edit">Редагувати</string>
     <string name="track_list">Список</string>
     <string name="location_disabled">Визначення місця розташування вимкнено</string>
     <string name="location_disabled_msg">Програма не може визначити, де ви знаходитесь. Увімкніть опцію \"Моє місце розташування\".</string>
@@ -246,8 +246,8 @@
     <string name="location_inaccuracy">Ви можете підвищити точність позиціонування, увімкнувши такі функції:</string>
     <string name="location_gps">GPS</string>
     <string name="location_network">По Wi-Fi та координатам мережі</string>
-    <string name="title_edit_by_walk">Запись обходом</string>
-    <string name="new_tms">Новый</string>
+    <string name="title_edit_by_walk">Запис обходом</string>
+    <string name="new_tms">Новий</string>
     <string name="most_frequently">Якнайчастіше</string>
     <string name="panel_hide">Не показувати панель</string>
     <string name="panel_show">Показувати поза редагуванням</string>
@@ -257,72 +257,72 @@
     <string name="location_both">Показувати маркер та коло точності</string>
     <string name="tms_no_cache">Не кешувати</string>
     <string name="tms_1_screen">1 екран</string>
-    <string name="tms_2_screens">2 екрана (рекомендовано)</string>
-    <string name="tms_3_screens">3 екрана</string>
+    <string name="tms_2_screens">2 екрани (рекомендовано)</string>
+    <string name="tms_3_screens">3 екрани</string>
     <string name="light">Світла</string>
     <string name="dark">Темна</string>
-    <string name="renderer">Отрисовка</string>
-    <string name="simple_renderer">Обычный</string>
-    <string name="rule_renderer">По правилу</string>
+    <string name="renderer">Відмальовування</string>
+    <string name="simple_renderer">Звичайний</string>
+    <string name="rule_renderer">За правилом</string>
     <string name="rules">Правила</string>
-    <string name="default_style">Стиль по-умолчанию</string>
-    <string name="value">Значение</string>
-    <string name="ngw_account_delete_warn_msg">Аккаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
-    <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
-    <string name="new_gis">Создать ГИС</string>
-    <string name="manual_ngw">Расширенные настройки</string>
-    <string name="instance_name">Имя ГИС</string>
-    <string name="ngw_from_my_nextgis">Еще нет своей ГИС? Зарегистрируйтесь на my.nextgis.com и создайте!</string>
-    <string name="ngid_account_new">Зарегистрироваться</string>
-    <string name="guest">Гость</string>
-    <string name="field_not_filled">Некоторые поля пустые</string>
+    <string name="default_style">Стиль за промовчанням</string>
+    <string name="value">Значення</string>
+    <string name="ngw_account_delete_warn_msg">Аккаунт буде видалено!\nВсі шари акаунту будуть видалені!\nПоточну синхронізацію буде зупинено!</string>
+    <string name="replace_field_rule">Всі поточні правила буде видалено через зміну поля для правила. Ви впевнені?</string>
+    <string name="new_gis">Створити ГІС</string>
+    <string name="manual_ngw">Розширені налаштування</string>
+    <string name="instance_name">Ім'я ГІС</string>
+    <string name="ngw_from_my_nextgis">Ще не маєте своєї ГІС? Зареєструйтеся на my.nextgis.com та створіть!</string>
+    <string name="ngid_account_new">Зареєстуватися</string>
+    <string name="guest">Гість</string>
+    <string name="field_not_filled">Деякі поля порожні</string>
     <string name="web_map">Веб карта</string>
-    <string name="preparing">Подготовка…</string>
-    <string name="export">Экспорт</string>
-    <string name="accurate_finish_sound">Уведомить о завершении</string>
-    <string name="no_features">В слое нет объектов </string>
+    <string name="preparing">Підготовка…</string>
+    <string name="export">Експорт</string>
+    <string name="accurate_finish_sound">Повідомити про завершення</string>
+    <string name="no_features">У шарі немає об'єктів</string>
     <string name="discard">@string/cancel</string>
-    <string name="error_export_geojson">Невозможно создать конечный geojson</string>
-    <string name="attributes">Таблица объектов</string>
-    <string name="error_cache">Неверный кэш, перестройте в настройках слоя</string>
-    <string name="sync_disable">Отключить синхронизацию</string>
-    <string name="sync_enable">Включить синхронизацию</string>
+    <string name="error_export_geojson">Неможливо створити кінцевий geojson</string>
+    <string name="attributes">Таблиця об'єктів</string>
+    <string name="error_cache">Невірний кеш, перебудуйте в налаштуваннях шару</string>
+    <string name="sync_disable">Вимкнути синхронізацію</string>
+    <string name="sync_enable">Увімкнути синхронізацію</string>
     <string name="ngw_account">Акаунт - %1$s</string>
-    <string name="menu_send_to_ngw">Отправить в NextGIS</string>
-    <string name="sync_disabled">Синхронизация отключена</string>
-    <string name="sync_enable_error">Ошибка при включении синхронизации</string>
-    <string name="sync_enabled">Синхронизация включена</string>
-    <string name="click_here">Нажмите сюда!</string>
-    <string name="manual_tip">Есть свой собственный NGW сервер?</string>
-    <string name="nextgis_com">Обратно на экран nextgis.com</string>
-    <string name="edit_by_touch">Дополнить геометрию касанием</string>
-    <string name="title_edit_by_touch">Изменить касанием</string>
-    <string name="auto">Auto</string>
-    <string name="manual">Вручную</string>
-    <string name="skip">Пропустить</string>
-    <string name="sync_dialog_message">Какой вариант вы хотите использовать для слоя? Эту опцию можно поменять в настройках слоя или в аккаунтах NextGIS Web.</string>
-    <string name="sync_dialog_title">Синхронизировать с NextGIS Web?</string>
-    <string name="import_">Импорт</string>
-    <string name="new_group">Создать новую группу</string>
-    <string name="new_group_name">Имя группы:</string>
-    <string name="message_group_created">Группа создана</string>
-    <string name="commercial">Доступно в коммерческой версии</string>
-    <string name="clear_layer">Удалить все объекты</string>
-    <string name="are_you_sure">Вы уверены?</string>
-    <string name="delete_features">Все объекты будут удалены.</string>
-    <string name="sync_direction">Направление синхронизации</string>
-    <string name="to_ngw">Только на сервер</string>
-    <string name="from_ngw">Только с сервера</string>
-    <string name="both_directions">В обе стороны</string>
-    <string name="ngid_settings">Учетная запись</string>
-    <string name="ngid_username">Имя пользователя</string>
+    <string name="menu_send_to_ngw">Надіслати до NextGIS</string>
+    <string name="sync_disabled">Синхронізацію вимкнено</string>
+    <string name="sync_enable_error">Помилка при увімкненні синхронізації</string>
+    <string name="sync_enabled">Синхронізацію увімкнено</string>
+    <string name="click_here">Натисніть сюди!</string>
+    <string name="manual_tip">Маєте власний NGW сервер?</string>
+    <string name="nextgis_com">Назад до екрану nextgis.com</string>
+    <string name="edit_by_touch">Доповнити геометрію доторком</string>
+    <string name="title_edit_by_touch">Змінити доторком</string>
+    <string name="auto">Автоматично</string>
+    <string name="manual">Вручну</string>
+    <string name="skip">Пропустити</string>
+    <string name="sync_dialog_message">Яким варіантом ви хочете скористатися для шару? Цю опцію можна змінити у налаштуваннях шару або в акаунтах NextGIS Web.</string>
+    <string name="sync_dialog_title">Синхронізувати з NextGIS Web?</string>
+    <string name="import_">Імпорт</string>
+    <string name="new_group">Створити нову групу</string>
+    <string name="new_group_name">Ім'я групи:</string>
+    <string name="message_group_created">Групу створено</string>
+    <string name="commercial">Доступно в комерційній версії</string>
+    <string name="clear_layer">Видалити всі об'єкти</string>
+    <string name="are_you_sure">Ви впевнені?</string>
+    <string name="delete_features">Всоб'єкти буде видалено.</string>
+    <string name="sync_direction">Напрям синхронізації</string>
+    <string name="to_ngw">Тільки на сервер</string>
+    <string name="from_ngw">Тільки з сервера</string>
+    <string name="both_directions">В обидва боки</string>
+    <string name="ngid_settings">Обліковий запис</string>
+    <string name="ngid_username">Ім'я користувача</string>
     <string name="ngid_email">E-mail</string>
-    <string name="ngid_first_name">Имя</string>
-    <string name="ngid_last_name">Фамилия</string>
+    <string name="ngid_first_name">Ім'я</string>
+    <string name="ngid_last_name">Прізвище</string>
     <string name="ngid_my">my.nextgis.com</string>
-    <string name="sign_out">Выйти</string>
+    <string name="sign_out">Вийти</string>
     <string name="not_set">Не задано</string>
-    <string name="ngid_account_ask">Еще нет своего аккаунта?</string>
-    <string name="sign_in_tip">для больших возможностей, синхронизации и получения обновлений</string>
-    <string name="select_row">Выберите поле</string>
+    <string name="ngid_account_ask">Ще не маєте свого акаунта?</string>
+    <string name="sign_in_tip">для більших можливостей, синхронізації та отримання оновлень</string>
+    <string name="select_row">Оберіть поле</string>
 </resources>
