--- a/src/main/res/values-hi/strings.xml
+++ b/src/main/res/values-hi/strings.xml
@@ -149,6 +149,7 @@
     <string name="zip">ZIP file</string>
     <string name="formbuilder">FormBuilder file</string>
     <string name="geojson">GeoJSON file</string>
+    <string name="unknown_file">Unknown file</string>
     <string name="add_point">Add point</string>
     <string name="edit_attributes">Edit attributes</string>
     <string name="move_point_to_current_location">Point to current location</string>
