--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2018 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -330,4 +330,7 @@
     <string name="coming_soon">Скоро будет доступно</string>
     <string name="get_pro">Функция доступна только подписчикам. Пожалуйста, войдите или ознакомьтесь подробнее (<a href="https://nextgis.com/pricing">https://nextgis.com/pricing</a>)</string>
     <string name="pro_user_only">Pro функция</string>
+    <string name="small">Маленький</string>
+    <string name="medium">Средний</string>
+    <string name="big">Большой</string>
 </resources>
