--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -346,4 +346,5 @@
     <string name="text_color">Text color</string>
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
+    <string name="delete_confirm">Confirm object deletion.</string>
 </resources>
