--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -345,4 +345,5 @@
     <string name="text_color">Text color</string>
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
+    <string name="delete_confirm">Confirm object deletion.</string>
 </resources>
