--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -243,7 +243,7 @@
     <string name="multi_linestring">Multipart linie</string>
     <string name="polygon">Polygon</string>
     <string name="multi_polygon">Multipolygon</string>
-    <string name="update_coordinates">Aktualizovat souřadnice</string>
+    <string name="update_coordinates">Aktualizovat</string>
     <string name="background_task_started">Zahájena inicializace vrstvy</string>
     <string name="processing">Zpracovat</string>
     <string name="error_unsupported_layer_type">Typ vrstvy není podporován </string>
