--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -345,4 +345,5 @@
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
     <string name="delete_confirm">Confirm object deletion.</string>
+    <string name="no_activity_found">Suitable activity not found</string>
 </resources>
