--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -346,4 +346,5 @@
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
     <string name="delete_confirm">Confirm object deletion.</string>
+    <string name="no_activity_found">Suitable activity not found</string>
 </resources>
