--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -346,4 +346,5 @@
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
     <string name="delete_confirm">Подтвердите удаление объекта.</string>
+    <string name="no_activity_found">Не найдено подходящего приложения</string>
 </resources>
