--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -348,4 +348,5 @@
     <string name="imperial">Британская</string>
     <string name="delete_confirm">Подтвердите удаление объекта.</string>
     <string name="no_activity_found">Не найдено подходящего приложения</string>
+    <string name="fb_form">Форма</string>
 </resources>
