Add trackpoints info

--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -4,7 +4,7 @@
   ~ Author:   Maxim Dubinin, maxim.dubinin@nextgis.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2016-2018 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016-20189 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -348,4 +348,6 @@
     <string name="delete_confirm">Confirm object deletion.</string>
     <string name="no_activity_found">Suitable activity not found</string>
     <string name="fb_form">Form</string>
+    <string name="trackpoints_stats">Total points: %1$d\nSynced count: %2$d\nLast point time: %3$s</string>
+    <string name="stats">Stats</string>
 </resources>
