--- a/src/main/res/values-ja/strings.xml
+++ b/src/main/res/values-ja/strings.xml
@@ -3,7 +3,7 @@
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2017-2018 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2017-2019 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -347,4 +347,6 @@
     <string name="delete_confirm">Confirm object deletion.</string>
     <string name="no_activity_found">Suitable activity not found</string>
     <string name="fb_form">Form</string>
+    <string name="trackpoints_stats">Total points: %1$d\nSynced count: %2$d\nLast point time: %3$s</string>
+    <string name="stats">Stats</string>
 </resources>
