--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -327,7 +327,7 @@
     <string name="sign_in_tip">для більших можливостей, синхронізації та отримання оновлень</string>
     <string name="select_row">Оберіть поле</string>
     <string name="coming_soon">Невдовзі стане доступне</string>
-    <string name="get_pro">Функция доступна только подписчикам. Пожалуйста, войдите или ознакомьтесь подробнее (https://nextgis.com/pricing)</string>
+    <string name="get_pro">Функция доступна только подписчикам. Пожалуйста, войдите или ознакомьтесь подробнее (https://nextgis.com/pricing-base)</string>
     <string name="pro_user_only">Pro функция</string>
     <string name="small">Small</string>
     <string name="medium">Medium</string>
