--- a/src/main/res/values-hi/strings.xml
+++ b/src/main/res/values-hi/strings.xml
@@ -3,7 +3,7 @@
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2017-2019 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2017-2020 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -350,5 +350,6 @@
     <string name="trackpoints_stats">Total points: %1$d\nSynced count: %2$d\nLast point time: %3$s</string>
     <string name="stats">Stats</string>
     <string name="no_permission">Write permission is not granted</string>
+    <string name="no_permission_granted">Permission is not granted</string>
     <string name="error_file_create">Error creating file</string>
 </resources>
