--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2018 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2014-2020 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -354,5 +354,6 @@
     <string name="trackpoints_stats">Total points: %1$d\nSynced count: %2$d\nLast point time: %3$s</string>
     <string name="stats">Stats</string>
     <string name="no_permission">Write permission is not granted</string>
+    <string name="no_permission_granted">Permission is not granted</string>
     <string name="error_file_create">Error creating file</string>
 </resources>
