--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -354,4 +354,7 @@
     <string name="no_permission">Нет разрешений на запись</string>
     <string name="no_permission_granted">Не хватает разрешений</string>
     <string name="error_file_create">Ошибка создания файла</string>
+    <string name="averaging">Усреднить</string>
+    <string name="averaging_enter_value">Введите значение (%1$d/%2$d)</string>
+    <string name="average_next">Дальше</string>
 </resources>
